--- a/dendron.yml
+++ b/dendron.yml
@@ -1,7 +1,6 @@
 version: 1
 vaults:
-    -
-        fsPath: vault
+  - fsPath: vault
 useFMTitle: true
 useNoteTitleForLink: true
 noAutoCreateOnDefinition: true
@@ -10,19 +9,19 @@ noXVaultWikiLink: true
 lookupConfirmVaultOnCreate: false
 autoFoldFrontmatter: true
 journal:
-    dailyDomain: daily
-    name: journal
-    dateFormat: y.MM.dd
-    addBehavior: childOfDomain
-    firstDayOfWeek: 1
+  dailyDomain: daily
+  name: journal
+  dateFormat: y.MM.dd
+  addBehavior: childOfDomain
+  firstDayOfWeek: 1
 site:
-    copyAssets: true
-    siteHierarchies:
-        - root
-    siteRootDir: docs
-    usePrettyRefs: true
-    title: A Hoarders Notes
-    description: My digital garden where I hoard all the interesting things I learn about.
-    siteUrl: https://mkell43.github.io
-    assetsPrefix:  a-hoarders-notes
+  copyAssets: true
+  siteHierarchies:
+    - root
+  siteRootDir: docs
+  usePrettyRefs: true
+  title: A Hoarders Notes
+  description: My digital garden where I hoard all the interesting things I learn about.
+  siteUrl: https://mkell43.github.io
+  assetsPrefix: a-hoarders-notes
 initializeRemoteVaults: true
