--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
-repos:
-  - repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.17.13
-    hooks:
-      - id: commitizen
-        stages: [commit-msg]
+- repo: https://github.com/jumanjihouse/pre-commit-hooks
+  rev: master
+  hooks:
+    - id: markdownlint
+    - id: shellcheck
+    - id: shfmt
