--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
     "@dendronhq/dendron-11ty": "^1.49.0",
     "@dendronhq/dendron-cli": "^0.49.0",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-emoji": "^1.3.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-emoji"
+    }
   }
 }
